...
    val username: String by registerViewModel.username.observeAsState(initial = "")
    val surname: String by registerViewModel.lastname.observeAsState(initial = "")
    val birthDate: LocalDate by registerViewModel.birthDate.observeAsState(initial = LocalDate.now())
    val gender: Gender by registerViewModel.gender.observeAsState(initial = Gender.MASCULINO)
    val weight: Double by registerViewModel.weight.observeAsState(initial = 0.0)
    val height: Int by registerViewModel.height.observeAsState(initial = 0)
    val textoInfo: String by registerViewModel.textoInfo.observeAsState(initial = "")

    var showDatePicker by remember { mutableStateOf(false) }

    Column(
        modifier = modifier
            .verticalScroll(rememberScrollState()), // Agregar scroll
...
            if (weightDouble != null && weightDouble > 0) {
                onWeightChange(weightDouble)
            } else if (newValue.isEmpty()) {
                onWeightChange(0.0) // Evita valores negativos pero permite borrar
            }
        },
        modifier = Modifier.fillMaxWidth().testTag("weightField"),
        label = { Text(text = "Peso") },
        leadingIcon = { Icon(imageVector = Icons.Default.FitnessCenter, contentDescription = "Peso") },
        trailingIcon = { Text(text = "Kg", style = MaterialTheme.typography.bodyMedium) },
        colors = TextFieldDefaults.colors(
            focusedTextColor = MaterialTheme.colorScheme.onBackground,
            unfocusedTextColor = MaterialTheme.colorScheme.onBackground.copy(alpha = 0.6f),
...
        onValueChange = { newValue ->
            val heightInt = newValue.toIntOrNull()
            if (heightInt != null && heightInt > 0) {
                onHeightChange(heightInt)
            }
        },
        modifier = Modifier.fillMaxWidth().testTag("heightField"),
        label = { Text(text = "Altura") },
        leadingIcon = { Icon(imageVector = Icons.Default.Height, contentDescription = "Altura") },
        trailingIcon = { Text(text = "cm", style = MaterialTheme.typography.bodyMedium) },
        colors = TextFieldDefaults.colors(
            focusedTextColor = MaterialTheme.colorScheme.onBackground,
            unfocusedTextColor = MaterialTheme.colorScheme.onBackground.copy(alpha = 0.6f),
...
fun NameInput(text: String, variable: String, onTextChange: (String) -> Unit) {
    OutlinedTextField(
        value = variable,
        onValueChange = { onTextChange(it) },
        modifier = Modifier.fillMaxWidth().testTag(
            when(text) {
                "Nombre" -> "nameField"
                "Apellidos" -> "surnameField"
                else -> "genericNameField"
            }
        ),
        label = { Text(text = text) },
        colors = TextFieldDefaults.colors(
            focusedTextColor = MaterialTheme.colorScheme.onBackground,
...

@Composable
fun UsernameInput(text: String, variable: String, onTextChange: (String) -> Unit) {
    OutlinedTextField(
        value = variable,
        onValueChange = { onTextChange(it) },
        modifier = Modifier.fillMaxWidth().testTag("usernameField"),
        label = { Text(text = text) },
        supportingText = { Text(text = "Solo letras, números, guiones bajos (_) y guiones (-).") },
        colors = TextFieldDefaults.colors(
            focusedTextColor = MaterialTheme.colorScheme.onBackground,
            unfocusedTextColor = MaterialTheme.colorScheme.onBackground.copy(alpha = 0.6f),
            focusedContainerColor = Color.Transparent,
...

    OutlinedTextField(
        value = formattedDate,
        onValueChange = {},
        modifier = modifier
            .clickable { setShowDatePicker(true) }
            .testTag("dateField"),
        readOnly = true,
        enabled = false,
        leadingIcon = {
            Icon(
                imageVector = Icons.Default.CalendarMonth,
                contentDescription = null,
...
fun RegisterButton(registerViewModel: RegisterViewModel) {
    Button(
        onClick = { registerViewModel.onRegisterSelected() },
        enabled = true,
        modifier = Modifier
            .fillMaxWidth()
            .testTag("registerButton"),
        shape = MaterialTheme.shapes.small,
        colors = ButtonDefaults.buttonColors(
            containerColor = MaterialTheme.colorScheme.primary,
            disabledContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.6f),
            contentColor = MaterialTheme.colorScheme.onPrimary,
            disabledContentColor = MaterialTheme.colorScheme.onPrimary.copy(alpha = 0.6f)
...
