...
        val height = _height.value

        if (email.isNullOrEmpty() || password1.isNullOrEmpty() || password2.isNullOrEmpty() ||
            username.isNullOrEmpty() || name.isNullOrEmpty() || surname.isNullOrEmpty() ||
            birthDate == null || gender == null || weight == null || height == null
        ) {
            setError("Todos los campos son obligatorios.")
            return
        }

        if (chekTexts(email, username, password1, password2, birthDate)) {
            viewModelScope.launch {
                _uiState.value = _uiState.value.copy(isLoading = true, errorMessage = null, successMessage = null)
...
                            gender = gender
                        )
                    )

                    _uiState.value = _uiState.value.copy(
                        isLoading = false,
                        successMessage = "Verifica la cuenta con el email recibido."
                    )
                    _navigateToLogin.value = true

                } catch (e: HttpException) {
                    _uiState.value = _uiState.value.copy(isLoading = false)
                    when (e.code()) {
...
